[package]
name = "globed-central-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "2.1.1"
colored = "2.0.4"
log = "0.4.20"
roa = { version = "0.6.1", features = ["router"] }
# serde = { version = "1.0.188", features = ["derive"] }
# serde_json = "1.0.106"
time = { version = "0.3.28", features = ["formatting"] }
tokio = { version = "1.32.0", default-features = false, features = ["rt", "macros", "rt-multi-thread", "fs"] }
